postgres-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: odoo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgres
          image: docker.io/bitnami/postgresql:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /bitnami/postgresql
      volumes:
        - name: postgres-storage
          emptyDir: {}
