odoo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: odoo
  namespace: odoo
spec:
  ports:
    - port: 80
      targetPort: 8069
  selector: 
    app: odoo
  type: ClusterIP
