postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: odoo
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgresql
  type: ClusterIP
