odoo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-resource
  namespace: odoo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: odoo
            port:
              number: 8069
